welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: Missing closing brace `}' assumed here
var Tour:Int = 0;
^Runner:5: error: illegal start of simple pattern
    var Pas_:Int = 0;
                 ^Runner:5: error: '=' expected but ';' found.
    var Pas_:Int = 0;
                    ^Runner:10: error: illegal start of simple pattern
    var Pas__:Int = 0;
                  ^Runner:10: error: '=' expected but ';' found.
    var Pas__:Int = 0;
                     ^Runner:15: error: illegal start of simple pattern
    var Pas___:Int = 0;
                   ^Runner:15: error: '=' expected but ';' found.
    var Pas___:Int = 0;
                      ^Runner:20: error: illegal start of simple pattern
    var Pas____:Int = 0;
                    ^Runner:20: error: '=' expected but ';' found.
    var Pas____:Int = 0;
                       ^Runner:25: error: illegal start of simple pattern
    var Pas_____:Int = 0;
                     ^Runner:25: error: '=' expected but ';' found.
    var Pas_____:Int = 0;
                        ^